[project]
name = "code-excution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [  
    "redis>=5.2.1",
]

[dependency-groups]
api = [
    "fastapi>=0.68.0",
    "uvicorn>=0.14.0",

]
test = [
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
